rename router and controller of admin
